# SecretScanner-github

./: .gitignore  Procfile  README.md  pyproject.toml  render.yaml
secretscanner/: __init__.py  allowlist.py  cli.py  context.py  detectors.py  entropy.py  report.py  scanner.py
secretscanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_context.py  test_detectors.py  test_entropy.py  test_scanner.py
web/backend/: main.py  requirements.txt
web/frontend/: app.js  index.html  styles.css
