[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secretscanner"
version = "0.1.0"
description = "A Python CLI tool that scans codebases and git history for secrets"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
secretscanner = "secretscanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secretscanner*"]
